--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -12,4 +12,5 @@
     <string name="signals">Signals</string>
     <string name="news">News</string>
     <string name="settings">Settings</string>
+    <string name="hide_password">hide password</string>
 </resources>
