--- a/app/src/main/res/values-night-v31/strings.xml
+++ b/app/src/main/res/values-night-v31/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="action_search">Tìm kiếm</string>
+    <string name="search">Tìm kiếm</string>
 </resources>
